--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "YouTube Link Extractor",
-  "version": "1.0.1",
+  "version": "1.0.1.1",
   "description": "This helps to extract links of embedded youtube videos from any webpage",
   "permissions": [
     "tabs",
@@ -9,7 +9,7 @@
     "webRequest",
     "webRequestBlocking"
   ],
-  "action": {
+  "browser_action": {
     "default_popup": "popup.html",
     "default_icon": "assets/popup.png"
   }
